fixed theme display on iPhone; added cookie support

--- a/public/css/sass.css
+++ b/public/css/sass.css
@@ -8552,7 +8552,7 @@ button.close {
   --link-hover-color: #fb4934;
   --body-font-color: #ddd;
   --body-font-color-light: #6f7373;
-  --button-color: #fb4934;
+  --button-color: #7c6f64;
   --bold-color: #cbdbe4;
   --panel-color: #2c2d31;
   --dark-gray: #383b3d;
@@ -10187,7 +10187,6 @@ hr {
 
 .theme-changer {
   float: right;
-  -webkit-appearance: none;
   position: fixed;
   top: 2px;
   right: 20px;
@@ -10198,6 +10197,7 @@ hr {
 }
 
 .theme-changer select {
+  -webkit-appearance: none;
   border: none;
   width: 4em;
   background: var(--panel-color);
