--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -54,7 +54,7 @@
   // --link-hover-color: #FF2121;
   --body-font-color:#ddd;
   --body-font-color-light:#6f7373;
-  --button-color: #fb4934;
+  --button-color: #7c6f64;
   --bold-color: #cbdbe4;
   --panel-color:#2c2d31;
   --dark-gray:#383b3d;
@@ -1482,7 +1482,6 @@ hr {
 
 .theme-changer {
   float: right;
-  -webkit-appearance: none;
   position: fixed;
   top: 2px;
   right: 20px;
@@ -1491,6 +1490,7 @@ hr {
   padding: 10px 0 0 10px;
   background: var(--panel-color);
   select {
+    -webkit-appearance: none;
     border: none;
     width: 4em;
     background: var(--panel-color);
